# libEDS

./: .gitignore  CMakeLists.txt  Librería Edición.sln  README.md
Ejemplos/BMPTool/: BMPTool.csproj  FrmBMP.Designer.cs  FrmBMP.cs  FrmFormatoPixel.Designer.cs  FrmFormatoPixel.cs  FrmPaleta.Designer.cs  FrmPaleta.cs  Program.cs
Ejemplos/BMPTool/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Ejemplos/Mandelbrot set/: mandelbrot.cpp
Ejemplos/bmpinfo/: Makefile  main.c
LibEDS.Net/: ExcepcionMascarasBits.cs  ExcepcionPaletaColores.cs  LibEDS.Net.csproj  MascarasBits.cs  PaletaColores.cs
LibEDS.Net/EDS/: DibujoEDS.cs  EDSMetodosC.cs  EDSTipos.cs  ExcepcionEDS.cs
LibEDS.Net/LibBMP/: BMPMetodosC.cs  BMPTipos.cs  ExcepcionBMP.cs  ImagenBMP.cs
LibEDS.Net/Properties/: AssemblyInfo.cs
Visual C++/: libEDS.vcxproj  libEDS.vcxproj.filters
examples/: CMakeLists.txt
examples/idx_img/: CMakeLists.txt  main.c
examples/test/: CMakeLists.txt
examples/vector_field/: CMakeLists.txt
src/: CMakeLists.txt  EDS.h  EDS_color.c  EDS_color.h  EDS_dibujo.c  EDS_dibujo.h  EDS_geo.c  EDS_geo.h  EDS_texto.c  EDS_texto.h  EDS_tipos.c  EDS_tipos.h  Makefile  dibujo_eds.hpp  excepcion_eds.hpp  imagen_bmp.hpp  libbmp.c  libbmp.h  test.cpp  vector_field.cpp
src/EDS/: CMakeLists.txt  EDS_bmp.c  EDS_bmp.h  EDS_color.c  EDS_color.h  EDS_dibujo.c  EDS_dibujo.h  EDS_tipos.c  EDS_tipos.h  EDS_version.h.in
